--- a/src/components/Topbar/style.css
+++ b/src/components/Topbar/style.css
@@ -1,16 +1,26 @@
-.box {
-    text-align: center;
-    padding: 2vw;
+.navbar {
+    position: fixed;
+    width: 100%;
+    top: 0%;
+    background-color: white;
+    overflow-x: hidden;
+    z-index: 1;
 }
 
-.topbar {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5%;
-    background-color: white;
-    z-index: 1;
-    overflow-x: hidden;
+.navbar a {
+    float: left;
+    display: block;
+    text-align: center;
+    padding: 1.5vw 1.5vw;
+    text-decoration: none;
+    width: 10vw;
+    color: gray;
 }
+
+.navbar a:hover {
+    background-color: #dddddd;
+    color: black;
+}
+
+
 
