--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: #8c8c8c;
+  background-image: url('resources/gradient.jpg')
 }
