--- a/src/components/Portfolio/style.css
+++ b/src/components/Portfolio/style.css
@@ -13,7 +13,7 @@
     column-gap: 3vw;
 }
 
-.skills li {
+.skills double li{
     width: 50%;
     color: white;
     font-size: 1.2vw;
@@ -21,6 +21,10 @@
     float: left;
 }
 
-.default-bullet {
-    
+.skills li single {
+    width: 100%;
+    color: white;
+    font-size: 1.2vw;
+    padding: 0.5vw;
+    float: left;
 }
