--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,4 +1,9 @@
 .btn {
     background: inherit;
-    font-size: 3vw;
+    font-size: 2.5vw;
+    outline: none;
+}
+
+.btn:hover {
+    cursor: pointer;
 }
