--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-image: url('resources/gradient.jpg');
+  /* background-color: #B5AEDE; */
   background-repeat: repeat;
 }
