--- a/src/containers/Portfolio/styles.css
+++ b/src/containers/Portfolio/styles.css
@@ -1,33 +1,3 @@
-/* .skills {
-    color: white;
-    position: relative;
-    top: 6vw;
-    padding: 3vw;
-    font-size: 3vw;
-}
-
-.skills ul {
-    margin: 0.5vw;
-    overflow: hidden;
-    column-count: 2;
-    column-gap: 3vw;
-}
-
-.skills li{
-    width: 50%;
-    color: white;
-    font-size: 1.2vw;
-    padding: 0.5vw;
-    float: left;
-}
-
-.skills li single {
-    width: 100%;
-    color: white;
-    font-size: 1.2vw;
-    padding: 0.5vw;
-    float: left;
-} */
 
 .bullet {
     width: 50%;
@@ -50,24 +20,28 @@
 .table {
     font-size: 3vh;
     border: none;
-    width: 50%;
+    width: 70%;
 }
 
 .table > tbody > tr > td {
     font-size: 2.5vh;
     border-top: 0;
     font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    width: 4vw;
 }
 
 .table > thead > tr > th {
     font-size: 2.5vh;
     border-bottom: 0;
+    width: 4vw;
 }
 
 .table > thead > tr {
     color: turquoise;
     font-size: 1.5rem;
     width: 5%;
+    text-align: center;
 }
 
 .skills {
@@ -115,3 +89,5 @@
 #spacing {
     margin: 5%;
 }
+
+
